--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     },
     "dependencies": {
         "marked": "^0.6.0",
-        "md-file-converter": "1.0.1"
+        "md-file-converter": "^1.2.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^7.5.0",
