--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
         {
             "files": ["tests/*.spec.js"],
             "rules": {
-                "node/no-unpublished-require": "off"
+                "node/no-unpublished-require": "off",
+                "node/no-unsupported-features/node-builtins": "warn"
             }
         }
     ]
