--- a/package.json
+++ b/package.json
@@ -63,26 +63,26 @@
         ]
     },
     "dependencies": {
-        "marked": "^0.6.0",
-        "md-file-converter": "^1.2.0"
+        "marked": "^0.6.2",
+        "md-file-converter": "^1.2.1"
     },
     "devDependencies": {
-        "@commitlint/cli": "^7.5.0",
-        "@commitlint/config-conventional": "^7.5.0",
-        "@commitlint/travis-cli": "^7.5.0",
-        "@types/marked": "^0.6.0",
-        "@types/node": "^10.12.0",
+        "@commitlint/cli": "^8.0.0",
+        "@commitlint/config-conventional": "^8.0.0",
+        "@commitlint/travis-cli": "^8.0.0",
+        "@types/marked": "^0.6.5",
+        "@types/node": "^10.14.8",
         "chai": "^4.2.0",
-        "commitizen": "^3.0.5",
+        "commitizen": "^3.1.1",
         "cz-conventional-changelog": "^2.1.0",
-        "eslint": "^5.11.1",
-        "eslint-plugin-node": "^8.0.0",
+        "eslint": "^5.16.0",
+        "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-security": "^1.4.0",
-        "husky": "^1.3.1",
-        "mocha": "^5.2.0",
+        "husky": "^2.4.0",
+        "mocha": "^6.1.4",
         "rimraf": "2.6.3",
-        "semantic-release": "^15.13.3",
-        "tslint": "5.12.1",
-        "typescript": "^3.3.3"
+        "semantic-release": "^15.13.16",
+        "tslint": "^5.17.0",
+        "typescript": "^3.5.1"
     }
 }
